// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookList with abnormal state snapshot a BookList then error 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="alert alert-error shadow-lg"
    >
      <div>
        <svg
          class="w-6 h-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.6 1c1.6.1 3.1.9 4.2 2 1.3 1.4 2 3.1 2 5.1 0 1.6-.6 3.1-1.6 4.4-1 1.2-2.4 2.1-4 2.4-1.6.3-3.2.1-4.6-.7-1.4-.8-2.5-2-3.1-3.5C.9 9.2.8 7.5 1.3 6c.5-1.6 1.4-2.9 2.8-3.8C5.4 1.3 7 .9 8.6 1zm.5 12.9c1.3-.3 2.5-1 3.4-2.1.8-1.1 1.3-2.4 1.2-3.8 0-1.6-.6-3.2-1.7-4.3-1-1-2.2-1.6-3.6-1.7-1.3-.1-2.7.2-3.8 1-1.1.8-1.9 1.9-2.3 3.3-.4 1.3-.4 2.7.2 4 .6 1.3 1.5 2.3 2.7 3 1.2.7 2.6.9 3.9.6zM7.9 7.5L10.3 5l.7.7-2.4 2.5 2.4 2.5-.7.7-2.4-2.5-2.4 2.5-.7-.7 2.4-2.5-2.4-2.5.7-.7 2.4 2.5z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Network Error!
        </span>
      </div>
    </div>
    <div />
  </div>
  <div />
</div>
`;

exports[`BookList with abnormal state snapshot a BookList then loading 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
    <div
      class="relative flex mb-4 w-full gap-3 animate-pulse"
    >
      <div
        class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
      />
      <div
        class="flex flex-col w-full gap-2"
      >
        <div
          class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
        />
        <div>
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
          />
          <div
            class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
          />
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`bookList snapshot a BookList 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div />
  </div>
  <div />
</div>
`;
